--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -11,7 +11,15 @@ spring:
     url: jdbc:postgresql://localhost/transfer-clipboard
     username: steiner
     password: 779151714
+  servlet:
+    multipart:
+      max-file-size:
+        100MB
+      max-request-size:
+        100MB
+
+
 
 file:
   storage:
-    url: /home/steiner/workspace/transfer-clipboard/storage
+    url: /home/steiner/disk/windows-data/Download/storage
