--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
-        android:label="frontend"
-        android:name="@string/app_name"
+        android:label="@string/app_name"
+        android:name="${applicationName}"
         android:icon="@drawable/clipboard"
         android:requestLegacyExternalStorage="true">
         <activity
